# anumodana

./: .gitignore  README.md  batch_parakeet_tree.py  llm_correct_vtt.py  pyproject.toml  review_vtt.py
.agents/skills/anumodana/: SKILL.md
anumodana/: __init__.py  __main__.py  correction.py  ffmpeg.py  glossary.py  jobs.py  manifest.py  ollama.py  output_paths.py  parakeet.py  pipeline.py  review.py  transcript.py
glossaries/: core_chants.txt  core_theravada_terms.txt  local_teachers_and_places.txt
glossaries/lineages/: ajahn_chah.txt
